--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -12,7 +12,7 @@
     <!-- Tooltips -->
     <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/jquery/qtip2/jquery.qtip.min.css')); ?>
 
-    <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/plupload/js/jquery.plupload.queue/css/jquery.plupload.queue.css')); ?>
+    <?php // $this->headLink()->appendStylesheet($this->baseUrl('lib/plupload/js/jquery.plupload.queue/css/jquery.plupload.queue.css')  ); ?>
     <?php $this->headLink()->prependStylesheet($this->baseUrl('lib/Tag-Handler/css/jquery.taghandler.css')); ?>
     <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/jquery-ui/css/Aristo/Aristo.css')); ?>
 
