--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -155,8 +155,16 @@
                 <div class="carousel-inner">
                   <div class="active item">
                     <img src="/../upload/highlight/angklung.jpeg" alt="" />
+                    <div class="carousel-caption">
+                      <h4><a href="#">Angklung di ITB</a></h4>
+                    </div>
                   </div>
-                  <div class="item"><img src="/../upload/highlight/smkn4bdg.jpg" alt="" /></div>
+                  <div class="item">
+                    <img src="/../upload/highlight/smkn4bdg.jpg" alt="" />
+                    <div class="carousel-caption">
+                      <h4><a href="#">Selamat datang di Website SMKN 4 Bandung</a></h4>
+                    </div>
+                  </div>
                 </div>
 
                 <a href="#highlight" class="carousel-control left" data-slide="prev">&lsaquo;</a>
