--- a/application/modules/admin/views/scripts/gallery/edit.phtml
+++ b/application/modules/admin/views/scripts/gallery/edit.phtml
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <h3>Tambah Album Baru</h3>
+  <h3>Sunting Album</h3>
 </div>
 <div class="row-fluid">
   <?php echo $this->render('gallery/form.phtml'); ?>
