--- a/application/modules/admin/views/scripts/highlight/form.phtml
+++ b/application/modules/admin/views/scripts/highlight/form.phtml
@@ -1,6 +1,6 @@
 <form action=""
       method="post"
-      class="form form-horizontal well"
+      class="form form-horizontal"
       enctype="multipart/form-data">
         <?php echo $this->form->title; ?>
         <?php echo $this->form->link; ?>
