--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -40,6 +40,21 @@
     <?php echo $this->headLink(); ?>
     <?php echo $this->headScript(); ?>
 
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-38322604-1']);
+      _gaq.push(['_trackPageview']);
+      _gaq.push(['_setDomainName', 'none']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
     <link rel="shortcut icon" href="/img/favico.png" />
 
     <style type="text/css">
