--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -56,8 +56,21 @@
         initCarousel();
       });
     </script>
-
     <title></title>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-38322604-1']);
+      _gaq.push(['_setDomainName', 'http://www.smkn4bdg.sch.id']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </head>
   <body>
     <div class="main container top-blue">
@@ -315,6 +328,7 @@
                 <br />
                 <br />
 
+                
                 <h4><i class="icon-rss"></i>&nbsp; Rubrik Edukasi</h4>
                 <ul class="unstyled">
                   <?php $feed = Zend_Feed_Reader::import('http://www.kompas.com/getrss/edukasi'); ?>
