--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -170,6 +170,7 @@
             <br />
 
             <h4><i class="icon-rss"></i>&nbsp; Rubrik Edukasi</h4>
+            hahahaha edukasi
 
             <br />
             <br />
