--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap framework -->
     <?php $this->headLink()->prependStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css')); ?>
-    <?php $this->headLink()->prependStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css')); ?>
+    <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css')); ?>
 
     <!-- Tooltips -->
     <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/jquery/qtip2/jquery.qtip.min.css')); ?>
@@ -25,6 +25,8 @@
 
     <!-- Main Jquery -->
     <?php $this->headScript()->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js')); ?>
+
+    <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/font-awesome/css/font-awesome.css')); ?>
 
     <?php $this->headScript()->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js')); ?>
     <?php $this->headScript()->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.plugins.js')); ?>
