--- a/public/css/front_layout.css
+++ b/public/css/front_layout.css
@@ -152,7 +152,11 @@ address#school-address {
   max-height: 300px;
   color: #fff;
   min-height: 300px;
+  background-color:#111111;
   background-image: -webkit-linear-gradient(top, #111111, #222222);
+  background-image: -moz-linear-gradient(top, #111111, #222222);
+  background-image: -html-linear-gradient(top, #111111, #222222);
+  background-image: -o-linear-gradient(top, #111111, #222222);
   border-top: solid 5px rgb(32, 109, 19);
 }
 
@@ -251,7 +255,7 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
     width: 1020px;
   }
   .main.row-fluid .span8 {
-    width: 68.3791%;
+    width: 68.379%;;
   }
 
   .jcarousel img {
