--- a/public/lib/gebo/css/style.css
+++ b/public/lib/gebo/css/style.css
@@ -784,7 +784,7 @@ input.title {
   .nav-collapse .caret-right {display:none}
   .btn-navbar {margin-top:2px !important;padding:2px 8px !important}
   .user_menu .dropdown {margin-left:10px}
-  .main_content {margin:0 !important;border:none !important;padding:28px 14px 20px}
+  .main_content {margin:0 !important;border:none !important;  padding: 23px 14px 20px; }
   .main_content .row-fluid + .row-fluid {margin-top:20px}
   .sidebar {height: 400px;position:absolute;top:39px;left:0;background:#f1f1f1;border-width:0 1px;border-style:solid;border-color:#ccc;margin:0;-webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.2);-moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.2);box-shadow: 1px 1px 4px rgba(0,0,0,0.2);z-index:1000;-webkit-border-radius: 0px 5px 5px 0px;border-radius: 0px 5px 5px 0px}
   .sidebar:after {border-bottom: 6px solid #fff;border-left: 6px solid transparent;border-right: 6px solid transparent;content: "";display: inline-block;left: 15px;position: absolute;top: -6px}
@@ -803,7 +803,9 @@ input.title {
 }
 
 @media (max-width: 767px) {
-  .row-fluid > [class*="span"] + [class*="span"] {margin-top:20px}
+  .row-fluid > [class*="span"] + [class*="span"] {
+    margin-top:20px;
+  }
   .row-fluid input[class*="span"],.row-fluid textarea[class*="span"],.row-fluid select[class*="span"] {width:80%}
   .input-prepend, .input-append {margin-bottom:10px}
   form .row-fluid > [class*="span"] + [class*="span"] {margin-top:0}
@@ -931,3 +933,5 @@ ul.tags.tagHandlerContainer {
 .thumbnails.gallery-grid a:hover figcaption {
   border-top-color: #169fe6;
 }
+
+
