ubah keterangan fields dkk

--- a/application/modules/admin/views/scripts/article/form.phtml
+++ b/application/modules/admin/views/scripts/article/form.phtml
@@ -20,7 +20,7 @@
             <ul class="tags" style="background-color: #fff"></ul>
             
           </div>
-          <span class="text text-info">Ketikan nama tag. Tekan Enter untuk menambahkan.</span>
+          <span class="text text-info">Ketikan tag. Tekan Enter untuk menambahkan.</span>
         </div>
       </div>
     </div>
