--- a/application/modules/admin/views/scripts/article/index.phtml
+++ b/application/modules/admin/views/scripts/article/index.phtml
@@ -22,7 +22,7 @@
           100 => 100
       ));
       ?>
-      <button name="action" value="filter" class="btn">Set</button>
+      <button name="action" value="filter" class="btn">Atur</button>
     </div>
   </div>
 
@@ -79,7 +79,7 @@
             <th>
               <?php
               echo $this->formText('filter[title]', $this->filter['title'], array(
-                  'placeholder' => 'Ketikan judul untuk pencarian'));
+                  'placeholder' => 'Cari berdasarkan judul artikel...'));
               ?>
             </th>
             <th>
