--- a/application/modules/admin/views/scripts/news/create.phtml
+++ b/application/modules/admin/views/scripts/news/create.phtml
@@ -3,7 +3,7 @@
 <?php $this->headScript()->appendScript("$(function(){SITi_tinyMCE.init();})") ?>
 
 <div class="row-fluid">
-  <h3>Posting Berita</h3>
+  <h3>Tambah Berita</h3>
 </div>
 <div class="row-fluid">
   <?php echo $this->render('news/form.phtml'); ?>
