--- a/application/modules/admin/views/scripts/article/create.phtml
+++ b/application/modules/admin/views/scripts/article/create.phtml
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <h3>Posting Artikel</h3>
+  <h3>Tambah Artikel</h3>
 </div>
 <div class="row-fluid">
   <?php echo $this->render('article/form.phtml'); ?>
