--- a/public/css/front_layout.css
+++ b/public/css/front_layout.css
@@ -271,7 +271,7 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
   .item img {
     min-height: 300px;
   }
-  
+
   .jcarousel img {
     width: 200px;
   }
@@ -435,9 +435,13 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
 /*back to top*/
 /*jang top*/
 #back-to-top{
-  display: block;
+  display: none;
   position: fixed;
   right: 20px;
-  top: 20px;
-  opacity: 0;
+  bottom: 20px;
+  color: #222;
+}
+
+#back-to-top:hover {
+  text-decoration: none;
 }
