--- a/application/modules/admin/views/scripts/prakerin/index.phtml
+++ b/application/modules/admin/views/scripts/prakerin/index.phtml
@@ -4,11 +4,12 @@ $sensor = "false";
 $libraries = "places";
 
 $this->headScript()
-->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}")
-->prependFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
-->prependFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
-->appendFile('http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.0.1/src/markerwithlabel_packed.js')
-->appendFile($this->baseUrl('js/prakerin/index.js'));
+        ->prependFile($this->baseUrl('js/prakerin_map.js'))
+        ->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}")
+        ->prependFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
+        ->prependFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
+        ->appendFile('http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.0.1/src/markerwithlabel_packed.js')
+        ->appendFile($this->baseUrl('js/prakerin/index.js'));
 
 $this->headLink()
         ->appendStylesheet($this->baseUrl('lib/multiselect/jquery.multiselect.css'));
