Guestbook, dan desain halaman profil

--- a/application/views/scripts/sidebar.phtml
+++ b/application/views/scripts/sidebar.phtml
@@ -1,6 +1,8 @@
 
 <div class = "push"></div>
 <div class = "inner">
+  <img src="<?php echo $this->baseUrl('timthumb.php?src=upload/mading/angklung.jpg&w=300&q=100'); ?>" 
+       alt="" style="margin-bottom: 10px;box-shadow: 0px 1px 4px rgba(50,50,50,0.25);"/>
   <div class = "agenda widget top-gray">
     <div class = "widget-header">
       <h4><i class = "icon-info-sign"></i> Pengumuman</h4>
@@ -124,5 +126,4 @@
       </div>
     </div>
   <?php endif; ?>
-
 </div>
