--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -11,7 +11,7 @@
     $result = $this->navigation()->findActive($navigation);
     $currentPage = $result['page'];
     $currentLabel = preg_replace('#\{(.*)\}#', '', $currentPage->getLabel());
-
+    
     echo $this
             ->headTitle($currentLabel)
             ->headTitle()->setSeparator(' - ')
@@ -105,7 +105,7 @@
 
               <ul class="nav pull-right">
                 <li id="fat-menu" class="dropdown">
-                  <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+                  <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-lock"></i> Login <b class="caret"></b></a>
                   <form action="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'login')); ?>" class="login dropdown-menu" method="post" autocomplete="off">
                     <div>
                       <input type="text" placeholder="Nama Pengguna" name="username"/>
