--- a/application/views/scripts/profil/index.phtml
+++ b/application/views/scripts/profil/index.phtml
@@ -1,90 +1,101 @@
+<style type="text/css">
+    .nav{
+        position: absolute;
+        left: 91px;
+    }
+</style>
+
 
 
 <div class="main row-fluid">
-    <ul class="nav nav-tabs fixed-bottom">
-        <li class="active">
-            <a href="#1A" data-toggle="tab">Pimpinan</a>
-        </li>
-        <li class="">
-            <a href="#1B" data-toggle="tab">Visi Misi</a>
-        </li>
-        <li class="">
-            <a href="#1C" data-toggle="tab">Sejarah</a>
-        </li>
-        <li class="">
-            <a href="#1D" data-toggle="tab">Motto</a>
-        </li>
-    </ul>
+    <div class="tabbable tabs-left">
+        <ul class="nav nav-tabs">
+                <li class="active">
+                    <a href="#1A" data-toggle="tab">Pimpinan</a>
+                </li>
+                <li class="">
+                    <a href="#1B" data-toggle="tab">Visi Misi</a>
+                </li>
+                <li class="">
+                    <a href="#1C" data-toggle="tab">Sejarah</a>
+                </li>
+                <li class="">
+                    <a href="#1D" data-toggle="tab">Motto</a>
+                </li>
+        </ul>
+    </div>
     <div class="span8">
         <div class="tabbable tabs-left">
 
 
 
-            <div class="tab-content">
-                <div class="tab-pane active" id="1A">
-                    <div class="hero-unit">
-                        <h1>
-                            Pimpinan
-                        </h1>
-                    </div>
-                    <div class="container-fluid">
-                        <div class="span6">
-                            <h3>Kepala Sekolah</h3>
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
-                            </p>
+            <div class="content-inner">
+                <div class="tab-content">
+                    <div class="tab-pane active" id="1A">
+                        <div class="hero-unit">
+                            <h1>
+                                Pimpinan
+                            </h1>
                         </div>
-                        <div class="span6 offset5">
-                            <h3>Wakil Kepala Sekolah</h3>
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
-                            </p>
+                        <div class="container-fluid">
+                            <div class="span6">
+                                <h3>Kepala Sekolah</h3>
+                                <p>
+                                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
+                                </p>
+                            </div>
+                            <div class="span6 offset5">
+                                <h3>Wakil Kepala Sekolah</h3>
+                                <p>
+                                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
+                                </p>
+                            </div>
                         </div>
-                    </div>
 
-                    <hr class="featurette-divider"/>
+                        <hr class="featurette-divider"/>
 
-                    <div class="container-fluid">
-                        <div class="span4">
-                            <h4>Wakasek</h4>
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
-                            </p>
+                        <div class="container-fluid">
+                            <div class="span4">
+                                <h4>Wakasek</h4>
+                                <p>
+                                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
+                                </p>
+                            </div>
+                            <div class="span4">
+                                <h4>Wakasek</h4>
+                                <p>
+                                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
+                                </p>
+                            </div>
+                            <div class="span4">
+                                <h4>Wakasek</h4>
+                                <p>
+                                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
+                                </p>
+                            </div>
                         </div>
-                        <div class="span4">
-                            <h4>Wakasek</h4>
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
-                            </p>
-                        </div>
-                        <div class="span4">
-                            <h4>Wakasek</h4>
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
-                            </p>
-                        </div>
-                    </div>
 
-                </div>
-                <div class="tab-pane" id="1B">
-                    <div class="hero-unit">
-                        <h1>
-                            Visi Misi
-                        </h1>
                     </div>
-                </div>
-                <div class="tab-pane" id="1C">
-                    <div class="hero-unit">
-                        <h1>
-                            Sejarah
-                        </h1>
+                    <div class="tab-pane" id="1B">
+                        <div class="hero-unit">
+                            <h1>
+                                Visi Misi
+                            </h1>
+                        </div>
                     </div>
-                </div>
-                <div class="tab-pane" id="1D">
-                    <div class="hero-unit">
-                        <h1>
-                            Motto
-                        </h1>
+                    <div class="tab-pane" id="1C">
+                        <div class="hero-unit">
+                            <h1>
+                                Sejarah
+                            </h1>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="1D">
+                        <div class="hero-unit">
+                            <h1>
+                                Motto
+                            </h1>
+                        </div>
                     </div>
                 </div>
             </div>
