--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -8,14 +8,12 @@
     $navigation = new Zend_Navigation($config);
     $menu = preg_replace('#\{(.*)\}#', '<i class="$1"></i>'
             , $this->navigation($navigation)->menu()->setUlClass('nav'));
-    $result = $this->navigation()->findActive($navigation);
-    $currentPage = $result['page'];
-    $currentLabel = preg_replace('#\{(.*)\}#', '', $currentPage->getLabel());
-    
-    echo $this
-            ->headTitle($currentLabel)
-            ->headTitle()->setSeparator(' - ')
+    $request = Zend_Controller_Front::getInstance()->getRequest();
+    $this->headTitle()
+            ->headTitle(ucfirst($request->getControllerName()))
+            ->setSeparator(' - ')
             ->headTitle('SMKN 4 Bandung');
+    
 
     $this
             ->minifyHeadLink()
@@ -31,7 +29,8 @@
             ->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js'))
             ->appendFile($this->baseUrl('lib/jCarousel/lib/jquery.jcarousel.js'))
             ->appendFile($this->baseUrl('js/frontend.js'));
-    
+
+    echo $this->headTitle();
     echo $this->minifyHeadLink();
     echo $this->minifyHeadScript();
     ?>
@@ -167,19 +166,19 @@
       <i class="icon-circle-arrow-up icon-3x"></i>
     </a>
     <script type="text/javascript">
-//      var _gaq = _gaq || [];
-//      _gaq.push(['_setAccount', 'UA-38322604-1']);
-//      _gaq.push(['_trackPageview']);
-//      _gaq.push(['_setDomainName', 'none']);
-//
-//      (function() {
-//        var ga = document.createElement('script');
-//        ga.type = 'text/javascript';
-//        ga.async = true;
-//        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-//        var s = document.getElementsByTagName('script')[0];
-//        s.parentNode.insertBefore(ga, s);
-//      })();  
+      //      var _gaq = _gaq || [];
+      //      _gaq.push(['_setAccount', 'UA-38322604-1']);
+      //      _gaq.push(['_trackPageview']);
+      //      _gaq.push(['_setDomainName', 'none']);
+      //
+      //      (function() {
+      //        var ga = document.createElement('script');
+      //        ga.type = 'text/javascript';
+      //        ga.async = true;
+      //        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      //        var s = document.getElementsByTagName('script')[0];
+      //        s.parentNode.insertBefore(ga, s);
+      //      })();  
     </script>
   </body>
 </html>
