edited spelling check

--- a/application/modules/admin/views/scripts/event/index.phtml
+++ b/application/modules/admin/views/scripts/event/index.phtml
@@ -20,7 +20,7 @@ SCRIPT
       <h3 style="display: inline">Kegiatan</h3>
       <a class="btn btn-link label label-success"
          href="<?php echo $this->url(array('action' => 'create')); ?>">
-        Posting Kegiatan
+        Tambah Kegiatan
       </a>
     </div>
     <div class="pull-right">
