--- a/application/modules/admin/views/scripts/event/create.phtml
+++ b/application/modules/admin/views/scripts/event/create.phtml
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <h3>Buat Kegiatan</h3>
+  <h3>Tambah Kegiatan</h3>
 </div>
 <div class="row-fluid">
   <?php echo $this->render('event/form.phtml'); ?>
