--- a/application/modules/admin/views/scripts/polling/index.phtml
+++ b/application/modules/admin/views/scripts/polling/index.phtml
@@ -8,7 +8,7 @@ $control = $this->paginationControl($this->paginator, 'Sliding',
   <h3 style="display: inline">Jajak Pendapat</h3>
   <a href="<?php echo $this->url(array('action' => 'create')); ?>"
     class="btn btn-link label label-success">
-   Posting Baru
+   Tambah Baru
   </a>
 </div>
 
@@ -20,7 +20,7 @@ $control = $this->paginationControl($this->paginator, 'Sliding',
           <button class="btn btn-mini btn-danger" type="submit"
                   name="delete"
                   onclick="if(!confirm(
-                    'Apakah anda yakin ingin menghapus polling yang dipilih?'))
+                    'Apakah anda yakin ingin menghapus Jajak Pendapat yang dipilih?'))
                     return false;">
             <i class="icon-trash"></i>
           </button>          
